force-app/main/default/objects/Error_Logs__c/Error_Logs__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>IGL-{00000000}</displayFormat>
        <label>Integration Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>