force-app/main/default/objects/Error_Logs__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>