force-app/main/default/objects/Error_Logs__c/fields/Account_Screening__c.field-meta.xml
<CustomField>
    <fullName>Account_Screening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Screening</label>
    <referenceTo>Account_Screening__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>