force-app/main/default/objects/Error_Logs__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Message</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>