force-app/main/default/objects/Error_Logs__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Updated Label part of Project Elevate</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>