force-app/main/default/objects/Error_Logs__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Error logs(Order)</relationshipLabel>
    <relationshipName>Dev_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>