force-app/main/default/objects/Error_Logs__c/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>