force-app/main/default/objects/Error_Logs__c/fields/SendtoJira__c.field-meta.xml
<CustomField>
    <fullName>SendtoJira__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is created as part of FY26WL-132, when checked it will send trigger and email to prdopsapps@rbk.com</description>
    <label>Send to Jira</label>
    <type>Checkbox</type>
</CustomField>