force-app/main/default/objects/Error_Logs__c/fields/Stage_PO__c.field-meta.xml
<CustomField>
    <fullName>Stage_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stage PO</label>
    <referenceTo>PO_Stage__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>