force-app/main/default/objects/Error_Logs__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Integration&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integration</fullName>
                <default>true</default>
                <label>Integration</label>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>Add DealReg on Oppty</fullName>
            </value>
            <value>
                <fullName>RSC Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>