force-app/main/default/objects/Error_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Method__c</columns>
    <columns>Object__c</columns>
    <columns>RecordId__c</columns>
    <columns>Related_Order__c</columns>
    <columns>Success__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error_Type__c</field>
        <operation>contains</operation>
        <value>Contract</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>SFDC</value>
    </filters>
    <label>All</label>
</ListView>