force-app/main/default/objects/Error_Logs__c/listViews/Order_Errors.listView-meta.xml
<ListView>
    <fullName>Order_Errors</fullName>
    <columns>NAME</columns>
    <columns>Error_Message__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Error_Type__c</field>
        <operation>equals</operation>
        <value>Order Error</value>
    </filters>
    <filters>
        <field>Success__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Order Errors</label>
</ListView>